--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,6 +28,7 @@ jobs:
       run: dotnet test --no-build --verbosity normal --logger "junit;LogFilePath=C:/test-results/results.xml"
 
     - name: Publish Unit Test Results
+      if: always()
       uses: EnricoMi/publish-unit-test-result-action/composite@v1
       with:
         files: C:/test-results/**/*.xml
